[package]
name = "rforests"
version = "0.1.0"
authors = ["Binsheng Liu <lbsx@users.noreply.github.com>"]

[[bin]]
name = "rforests"
doc = false

[dependencies]
env_logger = "0.4.3"
log = "0.3.8"
docopt = "0.8.1"
serde_derive = "1.0.14"
serde = "1.0.14"
num = "0.1.40"
bit-vec = "0.4.4"
itertools = "0.7.1"
clap = "2.26.2"
